--- a/src/components/Card/styles/card.css
+++ b/src/components/Card/styles/card.css
@@ -1,11 +1,7 @@
 @reference "tailwindcss";
 
-.card__container {
-    background-color: Red;
-}
-
-@layer components {
+@layer base {
     .card__container {
-        @apply rounded-xl, border-0, shadow-2xl, flex;
+        @apply rounded-xl border-0 shadow-lg shadow-black/50 flex m-3 p-4;
     }
 }
