Added react Router and main routes. Pages directory with the main pages implementation

--- a/src/components/BudgetExtras/styles/budgetExtras.css
+++ b/src/components/BudgetExtras/styles/budgetExtras.css
@@ -2,7 +2,7 @@
 
 @layer base {
     .budgetExtras__button {
-        @apply rounded border-gray-400 border m-1 leading-4 p-0;
+        @apply rounded-full border-gray-400 border m-1 leading-4 p-[0.2rem];
     }
 
     .budgetExtras__value {
