feat: UI for the pages and css formating

--- a/src/pages/Budgets/styles/budgets.css
+++ b/src/pages/Budgets/styles/budgets.css
@@ -2,6 +2,6 @@
 
 @layer base {
     .budget__header {
-        @apply rounded-xl  h-32 justify-center flex items-center bg-[url('./src/components/BudgetManager/assets/images/background-header.png')];
+        @apply rounded-xl h-32 justify-center flex items-center text-white;
     }
 }
