--- a/src/components/BudgetCard/styles/budgetCard.css
+++ b/src/components/BudgetCard/styles/budgetCard.css
@@ -8,7 +8,7 @@
     }
 
     .budgetCard__container--selected {
-        @apply border-blue-500 border;
+        @apply border-blue-500 border-3;
     }
     
     .budgetCard__dobleRow {
