--- a/src/components/BudgetCard/styles/budgetCard.css
+++ b/src/components/BudgetCard/styles/budgetCard.css
@@ -2,7 +2,7 @@
 
 @layer base {
     .budgetCard__container {
-        @apply rounded-xl border-0 shadow-lg shadow-black/50 sm:max-w-11/12 sm:mx-auto;
+        @apply rounded-xl border-0 shadow-lg shadow-black/50;
         @apply grid grid-cols-[30%_30%_30%_5%_5%] sm:grid-cols-[50%_20%_20%_5%_5%];
         @apply my-15 p-8 sm:p-10 items-center;
     }
