--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,4 +19,20 @@
   .title {
     @apply font-bold text-2xl;
   }
+
+  .button {
+    @apply bg-blue-600 text-white px-6 py-3 rounded-xl font-semibold shadow-lg hover:bg-blue-400 transition;
+  }
+
+  .container {
+    @apply sm:max-w-11/12 sm:mx-auto;
+  }
+
+  .dropShadow {
+    @apply shadow-lg shadow-black/50;
+  }
+
+  input::placeholder {
+    @apply text-xs;
+  }
 }
