--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,4 +35,10 @@
   input::placeholder {
     @apply text-xs;
   }
+
+  .card__container {
+      @apply rounded-xl border-0 shadow-lg shadow-black/50;
+      @apply grid grid-cols-[30%_30%_30%_5%_5%] sm:grid-cols-[50%_20%_20%_5%_5%];
+      @apply my-15 p-8 sm:p-10 items-center;
+  }
 }
