fix: fine tunning of some features like update budget list on budget creation, cleanup of validation feedback and valid classes on budget creation and some refactot

--- a/src/features/budgetsListing/BudgetServiceCard/styles/budgetServiceCard.css
+++ b/src/features/budgetsListing/BudgetServiceCard/styles/budgetServiceCard.css
@@ -6,6 +6,6 @@
     }
     
     .budgetCard__dobleRow {
-        @apply col-start-1 col-end-3 row-span-1;
+        @apply col-start-1 col-end-3 row-span-1 text-gray-700;
     }
 }
