--- a/src/features/budgetsManagement/BudgetsManager/styles/budgetsManager.css
+++ b/src/features/budgetsManagement/BudgetsManager/styles/budgetsManager.css
@@ -1,58 +1,40 @@
+@reference "tailwindcss";
+
+@layer base {
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+  @apply relative inline-block w-[60px] h-[34px];
 }
 
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+  @apply opacity-0 w-0 h-0;
 }
 
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  @apply absolute cursor-pointer top-0 left-0 right-0 bottom-0 bg-gray-500 duration-15;
 }
 
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  @apply absolute content-[""] h-[26px] w-[26px] l-1 bottom-1 bg-white duration-15;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  @apply bg-blue-500;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  @apply shadow-blue-400 shadow-sm;
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  @apply translate-7;
 }
 
 .slider.round {
-  border-radius: 34px;
+  @apply border-8;
 }
 
 .slider.round:before {
-  border-radius: 50%;
+  @apply border-8;
 }
+}
+
