--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: "Rubik", Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inter", Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
