fix: of the responsive layouts to fit better in small screens

--- a/src/features/budgetsListing/BudgetListOrder/styles/budgetListOrder.css
+++ b/src/features/budgetsListing/BudgetListOrder/styles/budgetListOrder.css
@@ -2,6 +2,6 @@
 
 @layer base {
   .orderElement {
-    @apply rotate-180 inline-block relative -top-1 font-bold;
+    @apply rotate-180 inline-block relative -top-1 font-bold cursor-pointer;
   }
 }
