--- a/src/features/budgetCreation/BudgetServiceExtras/styles/budgetServiceExtras.css
+++ b/src/features/budgetCreation/BudgetServiceExtras/styles/budgetServiceExtras.css
@@ -6,6 +6,6 @@
     }
 
     .budgetExtras__value {
-        @apply rounded border-gray-400 border m-1 w-10 p-2 text-center font-bold;
+        @apply rounded border-gray-400 border text-sm sm:text-base m-0 sm:m-1 w-7 sm:w-10 p-1 text-center font-bold;
     }
 }
