--- a/src/components/ModalInfo/styles/modalInfo.css
+++ b/src/components/ModalInfo/styles/modalInfo.css
@@ -1,39 +1,25 @@
+@reference "tailwindcss";
+
+@layer base {
 .modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  @apply fixed z-1 left-0 top-0 w-full h-full overflow-auto bg-[rgba(0,0,0,0.4)];
 }
 
-.modal-content p {
-  margin-top: 4rem;
-  text-align: center;
+.modalContent p {
+  @apply mt-4 text-center flex-33;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  height: 30%;
+.modalContent {
+  @apply bg-white my-[15%] mx-auto p-5 border border-gray-500 w-[80%] h-[30%] rounded-xl;
+  @apply flex items-center;
 }
 
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  @apply text-gray-400 text-xl font-bold flex-1 self-start;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+  @apply text-black cursor-pointer;
+}
 }
